<resources>
    <string name="app_name">Parcours_Mobile_7_GestionDesEmployee</string>
    <string name="email">email ?</string>
    <string name="password">password ?</string>
    <string name="login">login</string>
    <string name="first_name">first name?</string>
    <string name="last_name">last name?</string>
    <string name="phone">phone ?</string>
    <string name="register">Register</string>
    <string name="main_activity_label">My Users</string>
    <string name="lastname">Lastname</string>
    <string name="phone2">Phone</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="update_delete">update/delete</string>
    <string name="firstname">Firstname</string>

</resources>
